新增文章和活动模块

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>yuehu_recruit</module>
         <module>yuehu_qa</module>
         <module>yuehu_article</module>
+        <module>yuehu_gathering</module>
     </modules>
     <packaging>pom</packaging>
 
