封装返回的常量信息

--- a/yuehu_article/src/main/resources/application.yml
+++ b/yuehu_article/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
     generate-ddl: true
   redis:
     host: 127.0.0.1
+  data:
+    mongodb:
+      host: localhost
+      database: recruitdb
