--- a/yuehu_user/pom.xml
+++ b/yuehu_user/pom.xml
@@ -38,6 +38,10 @@
             <version>2.6</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
