--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>yuehu_search</module>
         <module>yuehu_user</module>
         <module>yuehu_sms</module>
+        <module>yuehu_eureka</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -46,6 +47,18 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-dependencies</artifactId>
+                <version>Finchley.M9</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
     <!--仓库，和下面的建议使用Spring全家桶的时候要加上-->
     <repositories>
