将每个微服务都注册到Eureka

--- a/yuehu_article/src/main/resources/application.yml
+++ b/yuehu_article/src/main/resources/application.yml
@@ -18,3 +18,7 @@ spring:
     mongodb:
       host: localhost
       database: recruitdb
+eureka:
+  client:
+    service‐url:
+      defaultZone: http://localhost:6868/eureka
