--- a/yuehu_spit/src/main/resources/application.yml
+++ b/yuehu_spit/src/main/resources/application.yml
@@ -7,3 +7,7 @@ spring:
     mongodb:
       host: localhost
       database: spildb
+eureka:
+  client:
+    service‐url:
+      defaultZone: http://localhost:6868/eureka
