--- a/yuehu_gathering/src/main/resources/application.yml
+++ b/yuehu_gathering/src/main/resources/application.yml
@@ -14,3 +14,7 @@ spring:
     generate-ddl: true
   redis:
     host: 127.0.0.1
+eureka:
+  client:
+    service‐url:
+      defaultZone: http://localhost:6868/eureka
