--- a/yuehu_search/pom.xml
+++ b/yuehu_search/pom.xml
@@ -20,6 +20,10 @@
             <artifactId>yuehu_common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
