--- a/yuehu_search/src/main/resources/application.yml
+++ b/yuehu_search/src/main/resources/application.yml
@@ -6,3 +6,7 @@ spring:
   data:
     elasticsearch:
       cluster-nodes: 127.0.0.1:9300
+eureka:
+  client:
+    service‐url:
+      defaultZone: http://localhost:6868/eureka
