--- a/yuehu_spit/src/main/resources/application.yml
+++ b/yuehu_spit/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9006
 spring:
   application:
-    name: yuehu_spit    #指定服务名
+    name: yuehu-spit    #指定服务名
   data:
     mongodb:
       host: localhost
