--- a/yuehu_article/src/main/resources/application.yml
+++ b/yuehu_article/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9004
 spring:
   application:
-    name: yuehu_qa    #指定服务名
+    name: yuehu-qa    #指定服务名
   datasource:
     driver-class-name: com.mysql.jdbc.Driver    # 不能写成driver.class.name
     url: jdbc:mysql://127.0.0.1:3307/tensquare_article?characterEncoding=utf-8
