--- a/yuehu_sms/src/main/resources/application.yml
+++ b/yuehu_sms/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9009
 spring:
   application:
-    name: yuehu_sms    #指定服务名
+    name: yuehu-sms    #指定服务名
   rabbitmq:
     host: 127.0.0.1
 
