--- a/yuehu_user/src/main/resources/application.yml
+++ b/yuehu_user/src/main/resources/application.yml
@@ -2,7 +2,7 @@ server:
   port: 9008
 spring:
   application:
-    name: yuehu_user    #指定服务名
+    name: yuehu-user    #指定服务名
   datasource:
     driver-class-name: com.mysql.jdbc.Driver
     url: jdbc:mysql://127.0.0.1:3307/tensquare_user?characterEncoding=utf-8
