--- a/yuehu_qa/src/main/resources/application.yml
+++ b/yuehu_qa/src/main/resources/application.yml
@@ -19,3 +19,7 @@ eureka:
   client:
     service‐url:
       defaultZone: http://localhost:6868/eureka
+# 启动hystrix熔断器
+feign:
+  hystrix:
+    enabled: true
