--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>yuehu_friend</module>
         <module>yuehu_manager</module>
         <module>yuehu_web</module>
+        <module>yuehu_config</module>
     </modules>
     <packaging>pom</packaging>
 
