--- a/yuehu_config/src/main/resources/application.yml
+++ b/yuehu_config/src/main/resources/application.yml
@@ -1,8 +1,19 @@
+spring:
+  application:
+    name: yuehu-config
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://gitee.com/baichendongyang/yuehu_config.git
 server:
-  port: 6868 #服务端口
+  port: 12000
 eureka:
   client:
-    registerWithEureka: false #是否将自己注册到Eureka服务中，本身就是所有无需注册
-    fetchRegistry: false #是否从Eureka中获取注册信息
-    serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址
-      defaultZone: http://127.0.0.1:${server.port}/eureka/
+    service‐url:
+      defaultZone: http://localhost:6868/eureka/
+management: #暴露触发消息总线的地址
+  endpoints:
+    web:
+      exposure:
+        include: bus‐refresh
