--- a/yuehu_user/src/main/resources/bootstrap.yml
+++ b/yuehu_user/src/main/resources/bootstrap.yml
@@ -1,13 +1,7 @@
 spring:
   cloud:
     config:
-      name: base
+      name: user
       profile: dev
       label: master
-      discovery:
-        enabled: true
-        service‐id: yuehu-config
-eureka:
-  client:
-    service‐url:
-      defaultZone: http://localhost:6868/eureka/
+      uri: http://127.0.0.1:12000
